fix: adjust price block positioning and font weight for better alignment

--- a/app/src/styles/product.scss
+++ b/app/src/styles/product.scss
@@ -136,7 +136,7 @@
 /* Price block */
 .pPrice {
   position: absolute;
-  left: 157px;
+  left: 127px;
   top: 650px;
   width: 474px;
 
@@ -188,7 +188,7 @@
 
 .pPrice__pixValue {
   font-family: "Montserrat", system-ui, -apple-system, Segoe UI, Roboto, Arial;
-  font-weight: 700;
+  font-weight: 400;
   color: #068100;
   text-decoration: underline;
 
